# camera-stream

./: Cargo.toml  README.md
examples/: capture.rs
src/: device.rs  error.rs  frame.rs  lib.rs  stream.rs  types.rs
src/platform/macos/: device.rs  ext.rs  frame.rs  mod.rs  stream.rs
